--- a/React 라이브러리/01. 라이브러리 기초.md
+++ b/React 라이브러리/01. 라이브러리 기초.md
@@ -113,3 +113,116 @@ Non-deterministic Resolution : css 파일 로드 타이밍 이슈
 
 Isolation: 격리 
 
+Styled-component 1-2
+----
+Automatic critical CSS: 자동 style injects & 코드 스플릿
+
+No class name bugs : unique/ overlap / missspellings
+
+Easier delection of CSS : tied to a specific component
+
+Simple dynamic styling : props/ global theme
+
+Painless maintenance : styling affecting your component 
+
+Automatic vender prefixing current standard only
+
+사용법 -> styled.{element}``
+
+styled(스타일드 컴포넌트) -> 상속, 확장 
+
+Styled-component 2
+----
+& -> 가상 엘리먼트 / 가상 선택자 
+
+Global Style -> 전역 스타일 
+
+attrs -> props addition
+
+keyframes /ThemeProvider -> Animation/ Theme
+
+-----
+
+스타일링 라이브러리 정리
+----
+어떤 라이브러리를 선택할 지는  본인에게 달려있음 
+
+
+강의 쌤은
+
+반응형 웹을 대응하기 위해 media query를 많이 쓰고 
+
+딱히 design system이 없던 곳에서 sass를 씀
+
+지금은 개발 편의 성을 생각하면 CSS in JS를 쓸듯 emotion
+
+
+OnsenUI
+----
+- UI라이브러리 -> 스타일링 된 컴포넌트 제공 
+
+- 기본적인 기능 -> 제공 
+
+- JS/ Vue/ React / Angular -> 모두 서포트 
+
+- 모바일 대응 -> 안드로이드 / 아이폰 대응
+
+- 다양한 컴포넌트 -> 모바일 케이스 대응 
+
+- 아이콘 -> Font Awesome / Ionicons
+
+- 문서 최신화 -> 잘안되는듯 (React 에 불친절함 )
+
+Ant Design
+----
+
+- React -> React 베이스 
+
+- Day.js -> Moment.js 제거 추천 
+
+- Design 철학 -> 단순한 컴포넌트 제공 + @
+
+- Typography -> 다양한 사이즈의 Text
+
+- Layout -> 화면 구조를 간편하게 배치 
+
+- 다양한 Component -> 복붙만으로 화면 구성 가능 
+
+- 문서를 읽는 방법 -> 익히히 좋음 
+
+
+React Semantic UI 
+----
+시멘틱?  의미론적 웹 -> 기계가 이해할 수 있는 웹페이지 
+
+웹 접근성 (시각장애인 분들을 위한)
+
+- Try It -> 변경을 바로 확인 가능 
+
+- as props -> Semantic한 tag 사용 가능
+
+- Comment /Feed -> 다 만들어서 제공 
+
+- 다양한 컴포넌트 -> 웹서비스 구성에 필요한 거의 모든 
+
+- 여러 컴포넌트 조합 -> visibility + progress
+<br/>
+----
+
+데이터 모킹 라이브러리
+====
+MSW
+----
+<h3>모킹(Mocking) 이란?</h3> 
+Mock(모의 데이터)를 만들어서 활용하는 방식 <br>
+통상적으로 data fetch를 해야하는 경우 통신을 통해 응답을 내려주는 서버가 있어야 함 
+
+서버가 없는경우 , 
+api 요청으로 내려올 데이터를 프론트에서 모킹하거나 서버의 역할을 해주는 무언가가 필요 
+
+Browser -> Service worker활용
+
+REST API /GraphQL -> 모두 모킹이 가능 
+
+MSW2
+----
