for,while,try-except, f-string

--- a/Groundwork/모르겠으면 외워.md
+++ b/Groundwork/모르겠으면 외워.md
@@ -7,8 +7,8 @@
 
 - rstrip() : 문자열의 오른쪽 개행문자(줄바꿈문자) 제거
 
- <h3>개행문자란?(고칠 개(改), 갈 행(行))(Whitespace)</h3>
-
+개행문자란?(고칠 개(改), 갈 행(行))(Whitespace)
+----
 -  ＼b  : 뒤로 한 칸 이동 (Backspace) (아스키코드 8)
 -  ＼t  : 수평탭 간격 띄우기 (아스키코드 9)
 -  ＼n  : 줄바꿈(Linefeed) (아스키코드 10)
@@ -31,7 +31,8 @@ c()
 #영희민수
 ```
 
-<h3>리눅스 용어 </h3>
+리눅스 용어
+---- 
 
 - ls : 현재 위치의 파일 목록을 조회하는 명령어 
 - cd : 디렉토리를 이동하는 명령어 
@@ -40,10 +41,47 @@ c()
 - rm : 파일을 제거하는 명령어 (rm -f fname: fname을 묻지않고 삭제, rm -r : dir삭제 , 디렉토리는 -r 옵션 없이는 삭제할 수 없음)
 
 
-<h3>참조연산자</h3>
+참조연산자
+----
 
 - A[i] : A의 인덱스 순서를 알려주는 참조연산자"[]" 
 - sys.stdin.readline : sys 안에 하위 디렉토리를 연결해주는 참조연산자"."
 
 
+-----
+2021/10/12
+====
 
+문자열 포매팅 %
+----
+d: digit 숫자 <br>
+s: 문자열 <br>
+f: 실수 (기본값이 소수 6자리, 4자리로 바꾸고싶으면 "%.4f")<br>
+
+예시
+```python 
+digit_A= 13
+str_A= "hi"
+float_A= 3.14
+
+type(digit_A)
+#<class 'int'>
+type(str_A)
+#<class 'str'>
+type(float_A)
+#<class 'float'>
+
+print("%d 랑 %s 랑 %f" %(digit_A,str_A,float_A))
+# 출력값 
+# 13 랑 hi 랑 3.140000
+```
+
+f-string 포매팅 -앞으로 이거 쓸것
+----
+f'문자열 {변수} 문자열'
+```python
+s = 'tomato'
+n = 5
+result1 = f'저는 {s}를 좋아합니다. 하루 {n}개 먹어요.'
+print(result1)
+```
