--- a/Groundwork/모르겠으면 외워.md
+++ b/Groundwork/모르겠으면 외워.md
@@ -85,3 +85,4 @@ n = 5
 result1 = f'저는 {s}를 좋아합니다. 하루 {n}개 먹어요.'
 print(result1)
 ```
+2021 목표 : React Stack 쌓기(🐣), Baekjoon<span style="color:gold"> Gold</span> 찍기
