변수의 선언, 할당, 초기화 /지역변수&전역변수

--- a/나는 금붕어/모르겠으면 외워.md
+++ b/나는 금붕어/모르겠으면 외워.md
@@ -85,4 +85,67 @@ n = 5
 result1 = f'저는 {s}를 좋아합니다. 하루 {n}개 먹어요.'
 print(result1)
 ```
-2021 목표 : React Stack 쌓기(🐣), Baekjoon<span style="color:gold"> Gold</span> 찍기
+------
+2021/10/16
+----
+이거 담에도 모른다고 하면 진짜 감자만도 못한거야 
+
+변수의 선언, 할당, 초기화
+----
+
+- 변수의 선언: 변수를 선언해 줌. 
+ex) const a, let a (a라는 저장공간을 만들겠다)
+- 변수의 할당: 이미 선언된 변수에 값을 할당해 줌.
+ex) a= 3, b= 5 
+- 변수의 초기화 : 변수를 선언함과 <b>동시에</b> 값을 할당해줌.
+ex) const a = 3 , let b =5
+
+const 와 let 의 차이
+----
+
+const : 상수;  상수의 값은 재할당 할 수 없음 (선언, 초기화 만 가능 (선언도 가능하긴 한데 굳이,,?))
+
+let : 변수에 재할당이 가능
+
+지역변수와 전역변수
+----
+
+지역변수 : 함수 안에서 만들어진 변수 
+
+전역변수 : 함수 밖에서 만들어진 변수 
+
+지역변수는 함수의 실행이 끝나면 없어지는 반면, 전역변수는 그냥 밖에 남아있음. 즉 지역변수를 전역공간(?)에서 쓰면 안됨
+
+틀린문제 복습
+----
+
+```python 
+import sys 
+input= sys.stdin.readline
+
+num_list = []
+
+count =1
+
+for i in range(9):
+    num_list.append(int(input()))
+    max_n =num_list[0]
+    
+    for i in num_list:
+        if i > max_n :
+            max_n = i 
+    
+print(max_n)
+```
+<h3>잘못된점</h3> 
+
+(1) 지역변수를 전역공간에서 씀 (```print(max_n)```)
+
+(2) 초기화한 변수(```max_n =num_list[0]```)가 for문에서 계속 반복됨.
+
+
+미래에는 추억(?)하면서 웃자^^,,,,
+
+
+
+
