지역변수&전역변수 retouch

--- a/나는 금붕어/모르겠으면 외워.md
+++ b/나는 금붕어/모르겠으면 외워.md
@@ -110,11 +110,11 @@ let : 변수에 재할당이 가능
 지역변수와 전역변수
 ----
 
-지역변수 : 함수 안에서 만들어진 변수 
+지역변수 : 함수 안에서 만들어진 변수(in python), {}로 둘러쌓인 곳에서 만들어진 변수
 
-전역변수 : 함수 밖에서 만들어진 변수 
+전역변수 : 함수,{} 밖에서 만들어진 변수 
 
-지역변수는 함수의 실행이 끝나면 없어지는 반면, 전역변수는 그냥 밖에 남아있음. 즉 지역변수를 전역공간(?)에서 쓰면 안됨
+지역변수는 함수,{}의 실행이 끝나면 없어지는 반면, 전역변수는 그냥 밖에 남아있음. 즉 지역변수를 전역공간(?)에서 쓰면 안됨
 
 틀린문제 복습
 ----
