--- a/나는 금붕어가 아니지만/모르겠으면 외워.md
+++ b/나는 금붕어가 아니지만/모르겠으면 외워.md
@@ -103,7 +103,7 @@ ex) const a = 3 , let b =5
 const 와 let 의 차이
 ----
 
-const : 상수;  상수의 값은 재할당 할 수 없음 (선언, 초기화 만 가능 (선언도 가능하긴 한데 굳이,,?))
+const : 상수(constant;변하지 않는);  상수의 값은 재할당 할 수 없음 (선언, 초기화 만 가능 (선언도 가능하긴 한데 굳이,,?))
 
 let : 변수에 재할당이 가능
 
