--- a/Python/시간복잡도와 공간복잡도.md
+++ b/Python/시간복잡도와 공간복잡도.md
@@ -9,7 +9,7 @@ PS의 단계에는 크게 구현(if,for,,), 자료구조(스택,큐,덱), 알고
 
 시간복잡도 때문에 결과값이 맞는데도 시간초과에러(TLE.Time Limit Exceeded)가 발생할 수 있음.
 
-물론 지금 푸는 문제단계도 시간복잡도와 공간복잡도에 제한을 두지만 문제가 너무 leen하기 때문에 신경도 안쓰고 잘만 풀어온것 ^^,,
+물론 지금 푸는 문제단계도 시간복잡도와 공간복잡도에 제한을 두지만 문제가 너무 린하기 때문에 신경도 안쓰고 잘만 풀어온것 ^^,,
 
 미래의 나에게 고생한다는 말을 전하며,,,
 이제 시간복잡도와 공간복잡도에 대해서 알아보자!
@@ -20,15 +20,13 @@ PS의 단계에는 크게 구현(if,for,,), 자료구조(스택,큐,덱), 알고
 점근적 복잡도 <br/>
 입력크기가 충분히 클 때, 시간복잡도와 공간복잡도를 분석하는 것을 말한다.
 
-각 알고리즘이 주어진 데이터의 크기를 기준으로 수행시간(연산) 혹은 사용공간이 얼마나 되는지 객관적으로 비교할 수 있는 기준 제시함.
-
 O(빅오), Ω(오메가), Θ(세타) 등이 있고, 빅오와 세타표기가 많이 사용된다.
 
 
 시간복잡도
 ====
-당연하게 생각하면 실행시간이 적게 걸리는 알고리즘이 좋은 알고리즘!즉, 시간복잡도는 알고리즘의 성능을 의미한다.  <br/>
-다른 의미로는 알고리즘을 수행하기 위해 프로세스가 수행해야하는 연산을 수치화 한 것 (명령어의 실행횟수 N만을 고려) <br/>
+당연하게 생각하!면 실행시간이 적게 걸리는 알고리즘이 좋은 알고리즘즉, 시간복잡도는 알고리즘의 성능을 의미한다.  <br/>
+알고리즘을 수행하기 위해 프로세스가 수행해야하는 연산을 수치화 한 것 (명령어의 실행횟수 N만을 고려) <br/>
 
 
 보통 Big O()표기법을 많이 사용(Big O(복잡도)). <br/>
@@ -46,15 +44,15 @@ Big O표기법의 종류는 다음과 같다.
 
 2. O(log n) – 로그 시간 : 
 
-문제를 해결하는데 필요한 단계들이 연산마다 특정 요인에 의해 줄어듬(~~set()이진탐색트리에서 숫자찾기). <br/>
-(set()함수 2가지 특징
+문제를 해결하는데 필요한 단계들이 연산마다 특정 요인에 의해 줄어듬(set 자료구조- 이진탐색트리). <br/>
+(set자료구조  2가지 특징
 (1). 집합을 허용하지 않음 
 (2). 순서가 없음. 
 )~~
 
 3. O(n) – 직선적 시간 : 
 
-문제를 해결하기 위한 단계의 수와 입력값 n이 1:1 관계를 가짐(y=x,list).
+복잡도와 입력값 n이 1:1 관계를 가짐(y=x,list).
 (for문 하나로 해결)
 
 
