--- a/Goldfish/아침1회독.md
+++ b/Goldfish/아침1회독.md
@@ -1,8 +1,6 @@
-너는 최고가 될거야... 공부해 바보야
+#2021/10/11
 ====
 
-2021/10/11
-----
 - <b>print()안에서는 할당이 안된다. 주의 또 주의</b>
 
 - rstrip() : 문자열의 오른쪽 개행문자(줄바꿈문자) 제거
@@ -87,23 +85,22 @@ print(result1)
 ```
 ------
 2021/10/16
-----
-이거 담에도 모른다고 하면 진짜 감자만도 못한거야 
+====
 
 변수의 선언, 할당, 초기화
 ----
 
-- 변수의 선언: 변수를 선언해 줌. 
+- 변수의 선언: 변수를 선언해 줌.<br/> 
 ex) const a, let a (a라는 저장공간을 만들겠다)
-- 변수의 할당: 이미 선언된 변수에 값을 할당해 줌.
+- 변수의 할당: 이미 선언된 변수에 값을 할당해 줌.<br/> 
 ex) a= 3, b= 5 
-- 변수의 초기화 : 변수를 선언함과 <b>동시에</b> 값을 할당해줌.
+- 변수의 초기화 : 변수를 선언함과 <b>동시에</b> 값을 할당해줌.<br/> 
 ex) const a = 3 , let b =5
 
 const 와 let 의 차이
 ----
 
-const : 상수(constant;변하지 않는);  상수의 값은 재할당 할 수 없음 (선언, 초기화 만 가능 (선언도 가능하긴 한데 굳이,,?))
+const : 상수(constant;변하지 않는);  상수의 값은 재할당 할 수 없음 (선언, 초기화 만 가능 (선언도 가능하긴 한데 안함))
 
 let : 변수에 재할당이 가능
 
@@ -142,10 +139,4 @@ print(max_n)
 (1) 지역변수를 전역공간에서 씀 (```print(max_n)```)
 
 (2) 초기화한 변수(```max_n =num_list[0]```)가 for문에서 계속 반복됨.
-
-
-미래에는 추억(?)하면서 웃자^^,,,,
-
-
-
 
