--- a/React/React 라이브러리/01. 라이브러리 기초.md
+++ b/React/React 라이브러리/01. 라이브러리 기초.md
@@ -53,7 +53,7 @@ Moment(Time/ Date 라이브러리)
 - Time zone / Format /Strict mode forgiving mode
 
 
-- 2011년부터 Date라이브러리 선두였으나, 새로운 자바스크립트의 흐름에 맞지않아 더 이상 없데이트가 없음 
+- 2011년부터 Date라이브러리 선두였으나, 새로운 자바스크립트의 흐름에 맞지않아 더 이상 업데이트가 없음 
 
 - 제일 큰 이슈는 사이즈, tree shaking알고리즘이 제대로 워킹하지 않음 
 
