--- a/Goldfish/아침1회독.md
+++ b/Goldfish/아침1회독.md
@@ -7,12 +7,12 @@
 
 개행문자란?(고칠 개(改), 갈 행(行))(Whitespace)
 ----
--  ＼b  : 뒤로 한 칸 이동 (Backspace) (아스키코드 8)
--  ＼t  : 수평탭 간격 띄우기 (아스키코드 9)
--  ＼n  : 줄바꿈(Linefeed) (아스키코드 10)
--  ＼v  : 수직탭 간격 띄우기 (아스키코드 11)
--  ＼f  : 프린트 출력 용지를 한 페이지 넘김 (Form feed) (아스키코드 12)
--  ＼r  : 동일한 줄의 맨 앞으로 커서 이동 (Carriage Return) (아스키코드 13)
+-  ＼b  : 뒤로 한 칸 이동 (Backspace) 
+-  ＼t  : 수평탭 간격 띄우기
+-  ＼n  : 줄바꿈(Linefeed) 
+-  ＼v  : 수직탭 간격 띄우기 
+-  ＼f  : 프린트 출력 용지를 한 페이지 넘김 
+-  ＼r  : 동일한 줄의 맨 앞으로 커서 이동 
 
 ```python
 a= "영희"
@@ -35,7 +35,7 @@ c()
 - ls : 현재 위치의 파일 목록을 조회하는 명령어 
 - cd : 디렉토리를 이동하는 명령어 
 - touch : 파일의 용량이 0인 파일 생성 , 날짜 변경  
-- <b>mv</b> : 파일 위치or 이름을 바꾸는데 쓰인다.
+- mv : 파일 위치or 이름을 바꾸는데 쓰인다.
 - rm : 파일을 제거하는 명령어 (rm -f fname: fname을 묻지않고 삭제, rm -r : dir삭제 , 디렉토리는 -r 옵션 없이는 삭제할 수 없음)
 
 
