--- a/JavaScript/브라우저저장소.md
+++ b/JavaScript/브라우저저장소.md
@@ -29,7 +29,7 @@ JSON.parse(localStorage.getItem("object"));
 세션스토리지는 `window.sessionStorage`에 위치한다.  
 메소드는 localstorage와 같으나 데이터가 영구적으로 보관되지 않을 뿐이다.
 
-## coockie
+## cookie
 
 브라우저에 저장소 역할을 하는 또 하나는 쿠키다.
 쿠키는 만료 기한이 있는 키-값 저장소다.
