--- a/JavaScript/깊은복사&얕은복사.md
+++ b/JavaScript/깊은복사&얕은복사.md
@@ -2,14 +2,68 @@
 
 ## 얕은복사
 
+얕은 복사는 참조(주소)값의 복사를 나타낸다.
+
 ```js
-let a = { word: "hello" };
+const obj = { value: 1 };
+const newObj = obj;
 
-let b = { word: "hello" };
-
-a == b;
-// false
+newObj.value = 2;
+console.log(obj.value); //2
+console.log(obj === newObj); //true
 ```
 
-참조 타입의 데이터는 값을 전달할 때 복사되지않고 참조값이 그대로 전달된다.
-a와 b는 다른 주소값을 참조하고 있기 때문에 false로 나온다.
+obj객체를 새로운 newObj에 할당하였다. 이것을 참조 할당 이라고 부른다.  
+이후, newObj  객체의 value값을 변경했더니, 기존의 obj.value도 값도 같이 변경된 것을 알 수 있으며, 두 객체를 비교해 봤을 때도 true로 나온다.
+
+자바스크립트의 참조타입은 얕은 복사가 되며, 이는 데이터가 그대로 생성되는 것이 아닌, 해당 데이터의 참조 값을 전달하여 한 데이터를 공유하고 있는 것이다.
+
+## 깊은 복사
+
+깊은 복사는 값 자체의 복사를 나타낸다.
+
+```js
+let a = 1;
+let b = a;
+
+b = 2;
+
+console.log(a); // 1
+console.log(b); // 2
+console.log(a === b); // false
+```
+
+변수 a를 새로운 b에 할당하였다.  
+b값을 변경하여도 기존의 a값은 변경되지 않는다.
+두 값을 비교하면 false가 출력되며, 서로의 값은 단독으로 존재한다는 것을 알 수 있다.
+
+자바스크립트의 원시 타입은 깊은 복사가 되며, 이는 독립적인 메모리에 값 자체를 할당하여 생성하는 것이라 볼 수 있다.
+
+## 객체의 깊은 복사
+
+객체를 그대로 복사하여 사용할 경우 기존 객체의 원본 데이터가 더럽혀 질 수 있기 때문에 깊은 복사는 매우 중요하다.
+
+### lodash 모듈의 cloneDeep()
+
+lodash 모듈의 cloneDeep()을 사용하면 객체의 깊은 복사가 가능하다.
+
+```
+npm i lodash
+```
+
+```js
+const obj = {
+  a: 1,
+  b: {
+    c: 2,
+  },
+  func: function () {
+    return this.a;
+  },
+};
+const newObj = lodash.cloneDeep(obj);
+
+newObj.b.c = 3;
+console.log(obj); // { a: 1, b: { c: 2 }, func: [Function: func] }
+console.log(obj.b.c === newObj.b.c); // false
+```
