--- a/JavaScript/깊은복사&얕은복사.md
+++ b/JavaScript/깊은복사&얕은복사.md
@@ -1,6 +1,6 @@
 # 깊은 복사 & 얕은 복사
 
-## 얕은복사
+## 얕은복사(shallow copy)
 
 얕은 복사는 참조(주소)값의 복사를 나타낸다.
 
@@ -18,7 +18,7 @@ obj객체를 새로운 newObj에 할당하였다. 이것을 참조 할당 이라
 
 자바스크립트의 참조타입은 얕은 복사가 되며, 이는 데이터가 그대로 생성되는 것이 아닌, 해당 데이터의 참조 값을 전달하여 한 데이터를 공유하고 있는 것이다.
 
-## 깊은 복사
+## 깊은 복사(deep copy)
 
 깊은 복사는 값 자체의 복사를 나타낸다.
 
@@ -37,7 +37,7 @@ console.log(a === b); // false
 b값을 변경하여도 기존의 a값은 변경되지 않는다.
 두 값을 비교하면 false가 출력되며, 서로의 값은 단독으로 존재한다는 것을 알 수 있다.
 
-자바스크립트의 원시 타입은 깊은 복사가 되며, 이는 독립적인 메모리에 값 자체를 할당하여 생성하는 것이라 볼 수 있다.
+자바스크립트의 원시 타입은 깊은` 복사가 되며, 이는 독립적인 메모리에 값 자체를 할당하여 생성하는 것이라 볼 수 있다.
 
 ## 객체의 깊은 복사
 
