--- a/JavaScript/함수스코프&블록스코프.md
+++ b/JavaScript/함수스코프&블록스코프.md
@@ -1,8 +1,8 @@
 # 함수 스코프 & 블록 스코프
 
-## 스코프와 컨텍스트
+## 스코프 & 컨텍스트
 
-스코프
+스코프  
 함수가 실행될 때, 함수 내에서 변수에 대한 접근이 어떻게 되는지를 나타내는 용어이다.  
 함수가 선언되면 무조건 스코프가 선언된다.
 
