비구조화 할당

--- a/JavaScript/JSBasic/비구조화할당.md
+++ b/JavaScript/JSBasic/비구조화할당.md
@@ -10,3 +10,28 @@ const { a, b } = object;
 console.log(a); // 1
 console.log(b); // 2
 ```
+
+함수의 파라미터에서도 비구조화 할당이 가능
+
+```js
+const object = { a: 1, b: 2 };
+
+function print({ a, b }) {
+  console.log(a);
+  console.log(b);
+}
+
+print(object);
+```
+
+# 배열 비구조화 할당
+
+```js
+const array = [1, 2];
+const [one, two] = array;
+
+console.log(one);
+console.log(two);
+
+// const [state, setState] = useState("")
+```
